# llm_processes

./: .gitignore  LICENSE  README.md  compute_nll.py  gp.py  gp_multitask.py  helpers.py  parse_args.py  plot.py  prepare_data.py  pyproject.toml  run_llm_process.py  sample.py
data/canada_precip/: incontext_precip_ALERT,NU.pkl  incontext_precip_CHARLOTTETOWN,PE.pkl  incontext_precip_COMOX,BC.pkl  incontext_precip_GOOSE,NL.pkl  incontext_precip_GREENWOOD,NS.pkl  incontext_precip_KEYLAKE,SK.pkl  incontext_precip_MONTREALPIERREELLIOTTT,QC.pkl  incontext_precip_OTTAWA,ON.pkl  incontext_precip_RANFURLY2NW,AB.pkl  incontext_precip_SAINTJOHN,NB.pkl  incontext_precip_THOMPSON,MB.pkl  incontext_precip_WHITEHORSE,YK.pkl  incontext_precip_YELLOWKNIFE,NT.pkl
data/functions/: beat_05_seed_0.pkl  beat_05_seed_1.pkl  beat_05_seed_2.pkl  beat_05_seed_3.pkl  beat_05_seed_4.pkl  beat_05_seed_5.pkl  beat_05_seed_6.pkl  beat_05_seed_7.pkl  beat_05_seed_8.pkl  beat_05_seed_9.pkl  beat_10_seed_0.pkl  beat_10_seed_1.pkl  beat_10_seed_2.pkl  beat_10_seed_3.pkl  beat_10_seed_4.pkl  beat_10_seed_5.pkl  beat_10_seed_6.pkl  beat_10_seed_7.pkl  beat_10_seed_8.pkl  beat_10_seed_9.pkl  beat_15_seed_0.pkl  beat_15_seed_1.pkl  beat_15_seed_2.pkl  beat_15_seed_3.pkl  beat_15_seed_4.pkl  beat_15_seed_5.pkl  beat_15_seed_6.pkl  (+813 more)
experiments/: classics.py  run_black_box_opt_exp.py  run_compare_exp.py  run_fashion_mnist_exp.py  run_functions_exp.py  run_housing_exp.py  run_in_context.py
llm_processes/: compute_nll.py  hf_api.py  parse_args.py  plot.py  prepare_data.py  run_llm_process.py  sample.py
(+119 files in other folders)
